feat: Refactor code for consistency and clarity across multiple classes